	  four partitions for a valid FAT file system.
	* drivers/input/tsc2007.c: Add support for 8-bit conversions; make sure
	  that A/D converters are active before requesting conversions.
	* drivers/mmcsd0/mmcsd_sdio.c: Increase capacity variable from size_t
	  to uin64_t (if available) so that SD cards with capacities greater
	  than 4Gb can be supported.
	* fs/fat/fs_fat32dirent.c: The root directory structure is different
	  from other directories.  When formatted by Windows, it is not initialized
	  at all.  Some additional special handling is required to initialize the
	  root directory entry to interoperate correctly with windows.
	* fs/fat/fs_fat32util.c: In fat_systime2fattime(void) should be
	  clock_gettime() and not clock_gettime().  Also, there is a place where
	  FAT date is used instead of FAT time. (Thanks to David Sidrane).
	* arch/arm/src/stm32 and arch/arm/include/stm32:  Add support for the
	  STM32F40xxx family of MCUs.
	* configs/stm3240g-eval:  Add framework for the STMicro STM3240G-EVAL
	  board.
	* include/sys/types.h:  wchar_t is a builtin type in C++ and its
	  declaration can cause errors with certain C++ compilers.
	* sched/sig_timedwait.c:  Fix signal handling when the returned info
	  is NULL.  Before this change, it would derefence a NULL pointer
	  in this case.
	* graphics/nxfonts/nxfonts_sans17x22.h and nxfonts_sans20x26.h:  Add
	  some very small sans serif fonts.
	* graphics/nxfonts/nxfonts_sans17x23b.h and nxfonts_sans20x27b.h:  Add
	  corresponding sans serif bold fonts.
	* drivers/input/ads7843e.c and tsc2007.c:  Fix some errors in the poll
	  setup error checking that was cloned into both drivers.
	* sched/mq_notify.c:  Set errno appropriately on failures.  There are
	  still several message queue functions that do not set errno!
	* arch/arm/src/stm32: Fixes to several STM32F40xxx files (contributed by
	  Mikhail Bychek).
	* configs/stm3210e-eval/src/up_lcd.c:  Fix banding problem on the R61580
	  LCD